--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=OvertimeTracker
+
+
+spring.datasource.url=jdbc:postgresql://localhost:3306/TestDB
+spring.datasource.username=postgres
+spring.datasource.password=Z170191erg
+spring.datasource.driver-class-name=org.postgresql.Driver
