added  DB Driver

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=OvertimeTracker
 
-
-spring.datasource.url=jdbc:postgresql://localhost:3306/TestDB
+spring.datasource.url=jdbc:postgresql://localhost:5432/TestDB
 spring.datasource.username=postgres
 spring.datasource.password=Z170191erg
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=validate
