--- a/src/main/resources/db/changes/relations/add-user-fk-to-overtime.yaml
+++ b/src/main/resources/db/changes/relations/add-user-fk-to-overtime.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 3
+      id: relation-between-user-and-over-time
       author: serj
       changes:
         - addColumn:
