changed fields in OwerTimeWork class
Double multiplier -> BigDecimal multiplier

Double overtime_hours -> BigDecimal overtime_hours

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: db/changes/creator/create-over-time-table.yaml
   - include:
       file: db/changes/relations/add-user-fk-to-overtime.yaml
+  - include:
+      file: db/changes/creator/create-salary-transactions.yaml
