--- a/src/main/resources/db/changes/creator/create-over-time-table.yaml
+++ b/src/main/resources/db/changes/creator/create-over-time-table.yaml
@@ -1,29 +1,29 @@
-databaseChangeLog:
-  - changeSet:
-      id: 1
-      author: serj
-      changes:
-        - createTable:
-            tableName: over_time_works
-            columns:
-              - column:
-                  name: id
-                  type: BIGINT
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: over_time_date
-                  type: TIMESTAMP
-              - column:
-                  name: description
-                  type: VARCHAR(255)
-              - column:
-                  name: multiplier
-                  type: DOUBLE
-              - column:
-                  name: overtime_hours
-                  type: DOUBLE
+  databaseChangeLog:
+    - changeSet:
+        id: create-over-time-works-table
+        author: serj
+        changes:
+          - createTable:
+              tableName: over_time_works
+              columns:
+                - column:
+                    name: id
+                    type: BIGINT
+                    autoIncrement: true
+                    constraints:
+                      primaryKey: true
+                      nullable: false
+                - column:
+                    name: over_time_date_registration
+                    type: DATE
+                - column:
+                    name: description
+                    type: VARCHAR(255)
+                - column:
+                    name: multiplier
+                    type: DECIMAL
+                - column:
+                    name: overtime_hours
+                    type: DECIMAL
 
 
