--- a/src/main/resources/db/changes/creator/create-user-table.yaml
+++ b/src/main/resources/db/changes/creator/create-user-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 1
+      id: create-user-table
       author: serj
       changes:
         - createTable:
@@ -23,8 +23,8 @@ databaseChangeLog:
                   name: department_name
                   type: VARCHAR(255)
               - column:
-                  name: position
-                  type: VARCHAR(255)
+                  name: salary
+                  type: DECIMAL
               - column:
                   name: phone_number
                   type: VARCHAR(255)
