added MissingWorkDays.class added relation with user

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: db/changes/relations/add-user-fk-to-overtime.yaml
   - include:
       file: db/changes/creator/create-salary-transactions.yaml
+  - include:
+      file: db/changes/creator/create-missing-workdays.yaml
