added MissingWorkDate repositories service dto controller
added create implementation in method

added field in MissingWorkDays: missed hours

--- a/src/main/resources/db/changes/creator/create-missing-workdays.yaml
+++ b/src/main/resources/db/changes/creator/create-missing-workdays.yaml
@@ -21,6 +21,10 @@ databaseChangeLog:
                     nullable: false
 
               - column:
+                  name: missing_hours
+                  type: DECIMAL
+
+              - column:
                   name: reason
                   type: VARCHAR(255)
 
