added registration / authorization system
added all dependencies for JWT and spring security

implemented user details interface
added all DTO for registration
added role for user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=OvertimeTracker
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/TestDB
-spring.datasource.username=postgres
-spring.datasource.password=Z170191erg
+spring.datasource.url=${DATABASE}
+spring.datasource.username=${DATABASEUSERNAME}
+spring.datasource.password=${DATABASEPASSWORD}
+
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -11,3 +13,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 
 server.servlet.context-path=/api
+
+jwt.secret=${jwt.secret}
+jwt.expiration=${jwt.expiration}
