--- a/src/main/resources/db/changes/creator/create-user-table.yaml
+++ b/src/main/resources/db/changes/creator/create-user-table.yaml
@@ -23,8 +23,19 @@ databaseChangeLog:
                   name: department_name
                   type: VARCHAR(255)
               - column:
+                  name: email
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: password
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
                   name: salary
                   type: DECIMAL
               - column:
                   name: phone_number
                   type: VARCHAR(255)
+             
