--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -15,3 +15,6 @@ databaseChangeLog:
       file: db/changes/relations/add-user-roles-table.yaml
   - include:
       file: db/changes/creator/create-roles-in-table.yaml
+  - include:
+      file: db/changes/creator/create-department-table.yaml
+
