--- a/src/main/resources/db/changes/insert/insert-basic-department-name.yaml
+++ b/src/main/resources/db/changes/insert/insert-basic-department-name.yaml
@@ -1,102 +1,103 @@
-- changeSet:
-    id: insert-departments-v2
-    author: serj
-    changes:
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+databaseChangeLog:
+  - changeSet:
+      id: insert-basic-department-name
+      author: serj
+      changes:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 1
-            - column:
+             - column:
                 name: name
                 value: ейчарня
-            - column:
+             - column:
                 name: code
                 value: HRNYA
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 2
-            - column:
+             - column:
                 name: name
                 value: асфалія
-            - column:
+             - column:
                 name: code
                 value: ASFALIA
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 3
-            - column:
+             - column:
                 name: name
                 value: чекап
-            - column:
+             - column:
                 name: code
                 value: CHECKUP
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 4
-            - column:
+             - column:
                 name: name
                 value: Алаз
-            - column:
+             - column:
                 name: code
                 value: ALAZ
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 5
-            - column:
+             - column:
                 name: name
                 value: Фурнітура
-            - column:
+             - column:
                 name: code
                 value: FURNITURA
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 6
-            - column:
+             - column:
                 name: name
                 value: Ферма
-            - column:
+             - column:
                 name: code
                 value: FERMA
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 7
-            - column:
+             - column:
                 name: name
                 value: Мольфари
-            - column:
+             - column:
                 name: code
                 value: MOLFARY
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+            -  column:
                 name: id
                 value: 8
             - column:
@@ -106,132 +107,132 @@
                 name: code
                 value: HOME
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 9
-            - column:
+             - column:
                 name: name
                 value: Команда X
-            - column:
+             - column:
                 name: code
                 value: KOMANDAX
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 10
-            - column:
+             - column:
                 name: name
                 value: Фксатори
-            - column:
+             - column:
                 name: code
                 value: FKSATORY
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 11
-            - column:
+             - column:
                 name: name
                 value: Соніки
-            - column:
+             - column:
                 name: code
                 value: SONYKY
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 12
-            - column:
+             - column:
                 name: name
                 value: KFC
-            - column:
+             - column:
                 name: code
                 value: KFC
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 13
-            - column:
+             - column:
                 name: name
                 value: Пивозаври
-            - column:
+             - column:
                 name: code
                 value: PYVOZAVRY
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 14
-            - column:
+             - column:
                 name: name
                 value: Скотч
-            - column:
+             - column:
                 name: code
                 value: SKOTCH
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 15
-            - column:
+             - column:
                 name: name
                 value: Детальня
-            - column:
+             - column:
                 name: code
                 value: DETALNYA
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 16
-            - column:
+             - column:
                 name: name
                 value: Катакомби
-            - column:
+             - column:
                 name: code
                 value: KATAKOMBY
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 17
-            - column:
+             - column:
                 name: name
                 value: Сервісний ремонт
-            - column:
+             - column:
                 name: code
                 value: SERVICE
 
-      - insert:
-          tableName: departments
-          columns:
-            - column:
+        - insert:
+            tableName: departments
+            columns:
+             - column:
                 name: id
                 value: 18
-            - column:
+             - column:
                 name: name
                 value: Масони
-            - column:
+             - column:
                 name: code
                 value: MASONY
