added userController(Admin level) *get all users by department id * getByUserId
added super user

solve Lazy exception and one +1 problem

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -19,3 +19,5 @@ databaseChangeLog:
       file: db/changes/creator/create-department-table.yaml
   - include:
       file: db/changes/insert/insert-basic-department-name.yaml
+  - include:
+      file: db/changes/insert/insert-super-user-to-user-table.yaml
