added user role as response to front can check user role

--- a/src/main/resources/db/changes/insert/insert-super-user-to-user-table.yaml
+++ b/src/main/resources/db/changes/insert/insert-super-user-to-user-table.yaml
@@ -41,3 +41,14 @@ databaseChangeLog:
               - column:
                   name: role_id
                   valueComputed: "(SELECT id FROM roles WHERE name = 'ADMIN')"
+
+        # Прив’язати суперкористувача до ролі USER
+        - insert:
+            tableName: users_roles
+            columns:
+              - column:
+                  name: user_id
+                  valueComputed: "(SELECT id FROM users WHERE email = 'superadmin@example.com')"
+              - column:
+                  name: role_id
+                  valueComputed: "(SELECT id FROM roles WHERE name = 'USER')"
