added expenses class

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -21,3 +21,7 @@ databaseChangeLog:
       file: db/changes/insert/insert-basic-department-name.yaml
   - include:
       file: db/changes/insert/insert-super-user-to-user-table.yaml
+  - include:
+      file: db/changes/creator/create-expense-table.yaml
+  - include:
+      file: db/changes/relations/add-user-fk-to-expense.yaml
