feat(ROLE): added two new role (FINANCIAL_MANAGER, TEAM_LEAD)

--- a/src/main/resources/db/changes/creator/create-roles-in-table.yaml
+++ b/src/main/resources/db/changes/creator/create-roles-in-table.yaml
@@ -15,3 +15,15 @@ databaseChangeLog:
               - column:
                   name: name
                   value: ADMIN
+        - insert:
+            tableName: roles
+            columns:
+              - column:
+                  name: name
+                  value: FINANCIAL_MANAGER
+        - insert:
+            tableName: roles
+            columns:
+              - column:
+                  name: name
+                  value: TEAM_LEAD
