--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=OvertimeTracker
 
-spring.datasource.url=${DATABASE}
-spring.datasource.username=${DATABASEUSERNAME}
-spring.datasource.password=${DATABASEPASSWORD}
+spring.datasource.url=jdbc:postgresql://overtime-tracker.cdgwooi6wq0u.eu-central-1.rds.amazonaws.com:5432/OverTimeDb
+spring.datasource.username=postgres
+spring.datasource.password=88888888
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,5 +14,5 @@ spring.jpa.hibernate.ddl-auto=validate
 
 server.servlet.context-path=/api
 
-jwt.secret=${jwt.secret}
-jwt.expiration=${jwt.expiration}
+jwt.secret=Jk29D$LmQ8xP!Zf3W@7KcT5Rbnmnbmnkkdjskjkjbljlskjlglhlshs
+jwt.expiration=30000000000000
