feat(deploy) snap shot of deploy version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=OvertimeTracker
 
-spring.datasource.url=jdbc:postgresql://overtime-tracker.cdgwooi6wq0u.eu-central-1.rds.amazonaws.com:5432/OverTimeDb
+spring.datasource.url=jdbc:postgresql://35.242.245.27:5432/OverTimeDB
 spring.datasource.username=postgres
-spring.datasource.password=88888888
+spring.datasource.password=<p=kY4ES;Eg6@+j8
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
