--- a/src/main/resources/db/changes/relations/add-user-fk-to-bonus.yaml
+++ b/src/main/resources/db/changes/relations/add-user-fk-to-bonus.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: add-user-fk-to-expense
+      id: add-user-fk-to-bonus
       author: serj
       changes:
         - addColumn:
-            tableName: expenses
+            tableName: bonuses
             columns:
               - column:
                   name: user_id
@@ -13,9 +13,9 @@ databaseChangeLog:
                     nullable: false
 
         - addForeignKeyConstraint:
-            baseTableName: expenses
+            baseTableName: bonuses
             baseColumnNames: user_id
             referencedTableName: users
             referencedColumnNames: id
-            constraintName: fk_expenses
+            constraintName: fk_bonuses
             onDelete: CASCADE
