commit before new branch

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+        <!-- email service -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
 		<!-- spring-dotenv -->
 		<dependency>
 			<groupId>me.paulschwarz</groupId>
@@ -121,7 +127,11 @@
 		</dependency>
 	</dependencies>
 
-	<build>
+
+
+
+
+    <build>
 		<plugins>
 			<!-- Maven Compiler Plugin -->
 			<plugin>
