--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=OvertimeTracker
 
-spring.datasource.url=jdbc:postgresql://35.242.245.27:5432/OverTimeDB
+spring.datasource.url=jdbc:postgresql://localhost:5432/TestDB
 spring.datasource.username=postgres
-spring.datasource.password=<p=kY4ES;Eg6@+j8
+spring.datasource.password=Z170191erg
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -16,3 +16,12 @@ server.servlet.context-path=/api
 
 jwt.secret=Jk29D$LmQ8xP!Zf3W@7KcT5Rbnmnbmnkkdjskjkjbljlskjlglhlshs
 jwt.expiration=30000000000000
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=serhii.hainovskyi@vyriy.com
+spring.mail.password=htlo wczg grav rthu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.timeout=5000
