додав валідації  додав умову (тимчасова )  додав періоди

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -31,3 +31,5 @@ databaseChangeLog:
       file: db/changes/insert/insert-display-name-fore-roles.yaml
   - include:
       file: db/changes/changes/add-temp-password-field-to-user.yaml
+  - include:
+      file: db/changes/creator/create-user-condition-table.yaml
