полагодив систему бонусів при старті видаляє користувача

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -33,3 +33,5 @@ databaseChangeLog:
       file: db/changes/changes/add-temp-password-field-to-user.yaml
   - include:
       file: db/changes/creator/create-user-condition-table.yaml
+  - include:
+      file: db/changes/insert/delete-user-serhii-hainovskyi.yaml
