feat(departments): introduce parent-child hierarchy and public children endpoint
- add parent_id column to departments with self FK + index (Liquibase)
- implement GET /api/{departmentId}/children to fetch sub-departments
- add DTO factory mapping for SubDepartmentResponseDto
- allow children endpoint without auth in SecurityFilterChain

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -35,3 +35,5 @@ databaseChangeLog:
       file: db/changes/creator/create-user-condition-table.yaml
   - include:
       file: db/changes/insert/delete-user-serhii-hainovskyi.yaml
+  - include:
+      file: db/changes/changes/add-parent-id-to-department.yaml
